--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dom 4</title>
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="container">
     <h1>Balance: <span>0</span></h1>
 
-    <form>
-      <div>
-        <label>How many?</label>
-        <input type="number" required min="1" name="coinQuantity" />
+    <form class="container mb-3">
+      <div class="row mb-3">
+        <label class="col-2">How many?</label>
+        <input class="col-2" type="number" required min="1" name="coinQuantity" value="1"/>
       </div>
 
-      <div>
-        <label>Which coin?</label>
-        <select name="coinName">
+      <div class="row mb-3">
+        <label class="col-2">Which coin?</label>
+        <select class="col-2" name="coinName">
           <option value="1">penny</option>
           <option value="5">nickel</option>
           <option value="10">dime</option>
@@ -26,10 +27,10 @@
         </select>
       </div>
       <!-- <button>Make Money!</button> -->
-      <input type="submit" value="Make Money!" />
+      <input type="submit" value="Make Money!" class="btn btn-success" />
     </form>
 
-    <section>
+    <section class="container">
         <!-- <div class="coin"></div> -->
        
     </section>
